--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,7 +9,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
   color: #212121;
-  line-height: 1.5;
+  line-height: 2.5;
+  background-color: #fff;
+    background-image: radial-gradient(circle, rgb(231, 231, 235) 20%, transparent 10%), radial-gradient(circle, rgb(220, 220, 223) 20%, transparent 10%);
+    background-size: 17px 17px;
+    background-position: 0 0, 0 0;
+  
 }
 
 #search-box {
@@ -17,4 +22,42 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+}
+.country-list{
+  margin: 0;
+  list-style: none;
+  padding: 0;
+  
+}
+.headline-box{
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 20px;
+  
+}
+.country-infobox{
+  margin-left: 10px;
+}
+.country-description{
+list-style: none;
+padding: 0%;
+margin: 0;
+}
+.country-name{
+  margin: 0;
+}
+.coutry-item{
+  
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  
+}
+.country-flag{
+  margin-right: 5px;
+}
+.description-category{
+  font-weight: 700;
 }
