--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,6 +22,7 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+  font-size: large;
 }
 .country-list{
   margin: 0;
@@ -49,7 +50,7 @@ margin: 0;
   margin: 0;
 }
 .coutry-item{
-  
+  font-weight: 500;
   display: flex;
   flex-direction: row;
   align-items: center;
